# gitui

./: .clippy.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  KEY_CONFIG.md  Makefile  README.md  THEMES.md  commit_helpers.ron.example  deny.toml  member.text  tombi.toml  vim_style_key_config.ron
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/instructions/: *.instructions.md
.github/workflows/: cd.yml  ci.yml  nightly.yml
asyncgit/: Cargo.toml
asyncgit/src/: blame.rs  branch_compare.rs  commit_files.rs  diff.rs  error.rs  lib.rs  remote_progress.rs  revlog.rs
asyncgit/src/graph/: buffer.rs  chunk.rs  mod.rs  oids.rs  walker.rs
asyncgit/src/sync/: blame.rs  commit.rs  commit_files.rs  commit_filter.rs  commit_revert.rs  commits_info.rs  config.rs  cred.rs  diff.rs  hooks.rs  hunks.rs  lfs.rs  logwalker.rs  merge.rs  mod.rs  push_todo.rs  rebase.rs  repository.rs  reset.rs  revwalk.rs  reword.rs  sign.rs  stash.rs  status.rs  submodules.rs  tags.rs  tree.rs  utils.rs  worktree.rs
asyncgit/src/sync/branch/: merge_commit.rs  mod.rs
asyncgit/src/sync/remotes/: callbacks.rs  mod.rs  push.rs  tags.rs
asyncgit/src/sync/staging/: mod.rs  stage_tracked.rs
filetreelist/src/: filetree.rs  (+2 more)
git2-hooks/: Cargo.toml
git2-testing/: Cargo.toml
package/: io.github.gitui_org.gitui.desktop  io.github.gitui_org.gitui.metainfo.xml
src/: app.rs  args.rs  clipboard.rs  cmdbar.rs  commit_helpers.rs  gitui.rs  input.rs  main.rs  options.rs  queue.rs  spinner.rs  string_utils.rs  strings.rs  terminal_io.rs  watcher.rs
themes/: gruvbox-light.ron
(+70 files in other folders)
