[package]
name = "asyncgit"
version = "0.28.0"
authors = ["extrawurst <mail@rusticorn.com>"]
edition = "2021"
description = "allow using git2 in a asynchronous context"
homepage = "https://github.com/gitui-org/gitui"
repository = "https://github.com/gitui-org/gitui"
readme = "README.md"
license = "MIT"
categories = ["concurrency", "asynchronous"]
keywords = ["git"]

[features]
default = ["trace-libgit"]
trace-libgit = []

[dependencies]
bitflags = "2"
crossbeam-channel = "0.5"
dirs = "6.0"
easy-cast = "0.5"
fuzzy-matcher = "0.3"
# TLS is provided by platform-native libraries:
# - Windows: WinHTTP/Schannel (built-in)
# - macOS: SecureTransport (built-in)
# - Linux: System OpenSSL (install via package manager)
git2 = "0.20"
git2-hooks = { path = "../git2-hooks", version = ">=0.6" }
gix = { version = "0.77.0", default-features = false, features = [
    "max-performance",
    "revision",
    "mailmap",
    "status",
] }
log = "0.4"
rayon = "1.11"
rayon-core = "1.13"
scopetime = { path = "../scopetime", version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
ssh-key = { version = "0.6.7", features = ["crypto", "encryption"] }
thiserror = "2.0"
unicode-truncate = "2.0"
url = "2.5"

[dev-dependencies]
env_logger = "0.11"
invalidstring = { path = "../invalidstring", version = "0.1" }
pretty_assertions = "1.4"
serial_test = "3.3"
tempfile = "3"
